change css details and popups implementation

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
             <div class="foto first"><img src="pictures/KND/KNDm.jpeg" alt=""></div>
             <div class="foto first hidden"><img src="pictures/KND/KND1.jpeg" alt=""></div>
             <div class="foto first hidden""><img src=" pictures/KND/KND2.jpeg" alt=""></div>
-            <div class="foto first hidden""><img src=" pictures/KND/KND3.jpeg" alt=""></div>
+            <div class="foto first hidden""><img src=" pictures/KND/KND3.jpeg" alt="">
+            </div>
             <div class="description">
               <p>Kuchnia</p>
               <p>powierzchnia: 000m<sup>2</sup></p>
@@ -82,19 +83,25 @@
             <div class="foto second hidden"><img src="pictures/MLD/MLD2.jpeg" alt=""></div>
             <div class="foto second hidden"><img src="pictures/MLD/MLD3.jpeg" alt=""></div>
             <div class="foto second hidden"><img src="pictures/MLD/MLD4.jpeg" alt=""></div>
-            <div class="foto second hidden"><img src="pictures/MLD/MLD5.jpeg" alt=""></div>
+            <div class="foto second hidden"><img src="pictures/MLD/MLD5.jpeg" alt="">
+            </div>
             <div class="description">
               <p>Kuchnia</p>
               <p>powierzchnia: 000m<sup>2</sup></p>
               <p>data: 15.05.2022</p>
             </div>
-            <div class="foto"><img src="pictures/MLDL/MLDLm.jpg" alt=""></div>
+            <div class="foto third"><img src="pictures/MLDL/MLDLm.jpg" alt=""></div>
+            <div class="foto third hidden"><img src="pictures/MLDL/MLDL1.jpg" alt=""></div>
+            <div class="foto third hidden"><img src="pictures/MLDL/MLDL2.jpeg" alt=""></div>
+            <div class="foto third hidden"><img src="pictures/MLDL/MLDL3.jpeg" alt=""></div>
             <div class="description">
               <p>Kuchnia</p>
               <p>powierzchnia: 000m<sup>2</sup></p>
               <p>data: 15.05.2022</p>
             </div>
-            <div class="foto"><img src="pictures/PRWL/PRWLm.jpeg" alt=""></div>
+            <div class="foto fourth"><img src="pictures/PRWL/PRWLm.jpeg" alt=""></div>
+            <div class="foto fourth hidden"><img src="pictures/PRWL/PRWL1.jpeg" alt=""></div>
+            <div class="foto fourth hidden"><img src="pictures/PRWL/PRWL2.jpeg" alt=""></div>
             <div class="description">
               <p>Kuchnia</p>
               <p>powierzchnia: 000m<sup>2</sup></p>
@@ -104,9 +111,30 @@
         </div>
         <div class="popup first hidden">
           <button class="popup__close first">X</button>
-          <img src="pictures/KND/KNDm.jpeg" alt="" class="popup__img">
+          <img src="" alt="" class="popup__img first">
           <button class="popup__arrow popup__arrow--left first">
             <</button> <button class="popup__arrow popup__arrow--right first">>
+          </button>
+        </div>
+        <div class="popup second hidden">
+          <button class="popup__close second">X</button>
+          <img src="" alt="" class="popup__img second">
+          <button class="popup__arrow popup__arrow--left second">
+            <</button> <button class="popup__arrow popup__arrow--right second">>
+          </button>
+        </div>
+        <div class="popup third hidden">
+          <button class="popup__close third">X</button>
+          <img src="" alt="" class="popup__img third">
+          <button class="popup__arrow popup__arrow--left third">
+            <</button> <button class="popup__arrow popup__arrow--right third">>
+          </button>
+        </div>
+        <div class="popup fourth hidden">
+          <button class="popup__close fourth">X</button>
+          <img src="" alt="" class="popup__img fourth">
+          <button class="popup__arrow popup__arrow--left fourth">
+            <</button> <button class="popup__arrow popup__arrow--right fourth">>
           </button>
         </div>
       </section>
@@ -115,7 +143,7 @@
           <h2>współpraca:</h2>
           <p>
             Zawsze jesteśmy otwarci na rozmowę i nowe doświadczenia, które pozwalają rozwijać się w naszym zawodzie.
-            Jeśli masz coś ciekawego do pokazania Światu, skontaktuj się z nami. Czekamy !
+            Jeśli masz coś ciekawego do pokazania Światu, skontaktuj się z nami. Czekamy!
           </p>
         </div>
       </section>
