--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Strona wizytówka warsztatu stolarskiego produkującego meble na zamówienie">
+  <meta name="keywords"
+    content="meble, meble na wymiar, wartszat stolarski, produkcja mebli, kuchnia, łazienka, Sławacinek Stary, Biała Podlaska">
+  <meta name="author" content="Tomasz Panasiuk">
   <title>warsztat stolarski</title>
   <link rel="stylesheet" href="style.css">
 </head>
