--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="author" content="Tomasz Panasiuk">
   <title>warsztat stolarski</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shotrtcut icon" href="logo/web1.svg">
 </head>
 
 <body>
