--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
         <div class="execution-div">
           <h2>realizacje:</h2>
           <div class="execution-wrapper">
-            <div class="foto first"><img src="pictures/KND/KNDm.jpeg" alt=""></div>
-            <div class="foto first hidden"><img src="pictures/KND/KND1.jpeg" alt=""></div>
-            <div class="foto first hidden""><img src=" pictures/KND/KND2.jpeg" alt=""></div>
-            <div class="foto first hidden""><img src=" pictures/KND/KND3.jpeg" alt="">
-            </div>
+            <div class="foto first"><img src="pictures/KND/KND1m.jpeg" alt=""></div>
+            <div class="foto first hidden"><img src="pictures/KND/KND2.jpeg" alt=""></div>
+            <div class="foto first hidden""><img src=" pictures/KND/KND3.jpg" alt=""></div>
+            <div class="foto first hidden""><img src=" pictures/KND/KND4.jpeg" alt=""></div>
+            <div class="foto first hidden""><img src=" pictures/KND/KND5.jpg" alt=""></div>
+            <div class="foto first hidden""><img src=" pictures/KND/KND6.jpeg" alt=""></div>
+            <div class="foto first hidden""><img src=" pictures/KND/KND7.jpg" alt=""></div>
             <div class="description">
               <p>Kuchnia</p>
               <p>powierzchnia: 000m<sup>2</sup></p>
@@ -88,8 +90,7 @@
             <div class="foto second hidden"><img src="pictures/MLD/MLD2.jpeg" alt=""></div>
             <div class="foto second hidden"><img src="pictures/MLD/MLD3.jpeg" alt=""></div>
             <div class="foto second hidden"><img src="pictures/MLD/MLD4.jpeg" alt=""></div>
-            <div class="foto second hidden"><img src="pictures/MLD/MLD5.jpeg" alt="">
-            </div>
+            <div class="foto second hidden"><img src="pictures/MLD/MLD5.jpeg" alt=""></div>
             <div class="description">
               <p>Kuchnia</p>
               <p>powierzchnia: 000m<sup>2</sup></p>
