change photo and add to execution section

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <main>
       <section class="intro">
         <div class="pictures">
-          <div><img src="pictures/Artboard1.png" alt="worshop-foto1"></div>
-          <div><img src="pictures/Artboard2.png" alt="worshop-foto2"></div>
-          <div><img src="pictures/Artboard3.png" alt="worshop-foto3"></div>
-          <div><img src="pictures/Artboard4.png" alt="worshop-foto4"></div>
+          <div><img src="pictures/Artboard1.jpeg" alt="worshop-foto1"></div>
+          <div><img src="pictures/Artboard2.jpeg" alt="worshop-foto2"></div>
+          <div><img src="pictures/Artboard3.jpeg" alt="worshop-foto3"></div>
+          <div><img src="pictures/Artboard4.jpeg" alt="worshop-foto4"></div>
         </div>
         <div class="intro-text">
           <h2>o nas:</h2>
@@ -73,45 +73,52 @@
         <div class="execution-div">
           <h2>realizacje:</h2>
           <div class="execution-wrapper">
-            <div class="foto first"><img src="pictures/KND/KND1m.jpeg" alt=""></div>
-            <div class="foto first hidden"><img src="pictures/KND/KND2.jpeg" alt=""></div>
-            <div class="foto first hidden""><img src=" pictures/KND/KND3.jpg" alt=""></div>
-            <div class="foto first hidden""><img src=" pictures/KND/KND4.jpeg" alt=""></div>
-            <div class="foto first hidden""><img src=" pictures/KND/KND5.jpg" alt=""></div>
-            <div class="foto first hidden""><img src=" pictures/KND/KND6.jpeg" alt=""></div>
-            <div class="foto first hidden""><img src=" pictures/KND/KND7.jpg" alt=""></div>
+            <div class="foto first"><img src="pictures/1_PIE/PIEm.jpg" alt=""></div>
+            <div class="foto first hidden"><img src="pictures/1_PIE/PIE1.jpeg" alt=""></div>
+            <div class="foto first hidden""><img src=" pictures/1_PIE/PIE2.jpeg" alt=""></div>
+            <div class="foto first hidden""><img src=" pictures/1_PIE/PIE3.jpeg" alt=""></div>
+            <div class="foto first hidden""><img src=" pictures/1_PIE/PIE4.jpeg" alt=""></div>
+            <div class="foto first hidden""><img src=" pictures/1_PIE/PIE5.jpeg" alt=""></div>
+            <div class="foto first hidden""><img src=" pictures/1_PIE/PIE6.jpeg" alt=""></div>
+            <div class="foto first hidden""><img src=" pictures/1_PIE/PIE7.jpeg" alt=""></div>
+            <div class="foto first hidden""><img src=" pictures/1_PIE/PIE8.jpeg" alt=""></div>
             <div class="description">
-              <p>Kuchnia</p>
-              <p>powierzchnia: 000m<sup>2</sup></p>
-              <p>data: 15.05.2022</p>
+              <p>kuchnia PIE</p>
+              <p>powierzchnia: 6.1 m<sup>2</sup></p>
             </div>
-            <div class="foto second"><img src="pictures/MLD/MLDm.jpeg" alt=""></div>
-            <div class="foto second hidden"><img src="pictures/MLD/MLD1.jpeg" alt=""></div>
-            <div class="foto second hidden"><img src="pictures/MLD/MLD2.jpeg" alt=""></div>
-            <div class="foto second hidden"><img src="pictures/MLD/MLD3.jpeg" alt=""></div>
-            <div class="foto second hidden"><img src="pictures/MLD/MLD4.jpeg" alt=""></div>
-            <div class="foto second hidden"><img src="pictures/MLD/MLD5.jpeg" alt=""></div>
+            <div class="foto second"><img src="pictures/2_PRW/PRWm.jpeg" alt=""></div>
+            <div class="foto second hidden"><img src="pictures/2_PRW/PRW1.jpg" alt=""></div>
+            <div class="foto second hidden"><img src="pictures/2_PRW/PRW2.jpeg" alt=""></div>
+            <div class="foto second hidden"><img src="pictures/2_PRW/PRW3.jpeg" alt=""></div>
+            <div class="foto second hidden"><img src="pictures/2_PRW/PRW4.jpeg" alt=""></div>
             <div class="description">
-              <p>Kuchnia</p>
-              <p>powierzchnia: 000m<sup>2</sup></p>
-              <p>data: 15.05.2022</p>
+              <p>kuchnia PRW</p>
+              <p>9.5 m<sup>2</sup></p>
             </div>
-            <div class="foto third"><img src="pictures/MLDL/MLDLm.jpg" alt=""></div>
-            <div class="foto third hidden"><img src="pictures/MLDL/MLDL1.jpg" alt=""></div>
-            <div class="foto third hidden"><img src="pictures/MLDL/MLDL2.jpeg" alt=""></div>
-            <div class="foto third hidden"><img src="pictures/MLDL/MLDL3.jpeg" alt=""></div>
+            <div class="foto third"><img src="pictures/3_KOND/KOND1m.jpeg" alt=""></div>
+            <div class="foto third hidden"><img src="pictures/3_KOND/KOND2.jpeg" alt=""></div>
+            <div class="foto third hidden"><img src="pictures/3_KOND/KOND3.jpg" alt=""></div>
+            <div class="foto third hidden"><img src="pictures/3_KOND/KOND4.jpeg" alt=""></div>
+            <div class="foto third hidden"><img src="pictures/3_KOND/KOND5.jpg" alt=""></div>
+            <div class="foto third hidden"><img src="pictures/3_KOND/KOND6.jpeg" alt=""></div>
+            <div class="foto third hidden"><img src="pictures/3_KOND/KOND7.jpg" alt=""></div>
             <div class="description">
-              <p>Kuchnia</p>
-              <p>powierzchnia: 000m<sup>2</sup></p>
-              <p>data: 15.05.2022</p>
+              <p>kuchnia KOND</p>
+              <p>powierzchnia: 6.7 m<sup>2</sup></p>
             </div>
-            <div class="foto fourth"><img src="pictures/PRWL/PRWLm.jpeg" alt=""></div>
-            <div class="foto fourth hidden"><img src="pictures/PRWL/PRWL1.jpeg" alt=""></div>
-            <div class="foto fourth hidden"><img src="pictures/PRWL/PRWL2.jpeg" alt=""></div>
+            <div class="foto fourth"><img src="pictures/4_PRWL/PRWLm.jpeg" alt=""></div>
+            <div class="foto fourth hidden"><img src="pictures/4_PRWL/PRWL1.jpeg" alt=""></div>
+            <div class="foto fourth hidden"><img src="pictures/4_PRWL/PRWL2.jpeg" alt=""></div>
             <div class="description">
-              <p>Kuchnia</p>
-              <p>powierzchnia: 000m<sup>2</sup></p>
-              <p>data: 15.05.2022</p>
+              <p>łazienka PRWL</p>
+            </div>
+            <div class="foto fifth "><img src="pictures/5_ABZ/ABZm.jpg" alt=""></div>
+            <div class="foto fifth hidden"><img src="pictures/5_ABZ/ABZ1.jpeg" alt=""></div>
+            <div class="foto fifth hidden"><img src="pictures/5_ABZ/ABZ2.jpeg" alt=""></div>
+            <div class="foto fifth hidden"><img src="pictures/5_ABZ/ABZ3.jpeg" alt=""></div>
+            <div class="description">
+              <p>kuchnia ABZ</p>
+              <p>powierzchnia: 4.8 m<sup>2</sup></p>
             </div>
           </div>
         </div>
@@ -141,6 +148,13 @@
           <img src="" alt="" class="popup__img fourth">
           <button class="popup__arrow popup__arrow--left fourth">
             <</button> <button class="popup__arrow popup__arrow--right fourth">>
+          </button>
+        </div>
+        <div class="popup fifth hidden">
+          <button class="popup__close fifth">X</button>
+          <img src="" alt="" class="popup__img fifth">
+          <button class="popup__arrow popup__arrow--left fifth">
+            <</button> <button class="popup__arrow popup__arrow--right fifth">>
           </button>
         </div>
       </section>
