change execution content

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="foto first hidden""><img src=" pictures/1_PIE/PIE7.jpeg" alt=""></div>
             <div class="foto first hidden""><img src=" pictures/1_PIE/PIE8.jpeg" alt=""></div>
             <div class="description">
-              <p>kuchnia PIE</p>
+              <p>kuchnia</p>
               <p>powierzchnia: 6.1 m<sup>2</sup></p>
             </div>
             <div class="foto second"><img src="pictures/2_PRW/PRWm.jpeg" alt=""></div>
@@ -92,7 +92,7 @@
             <div class="foto second hidden"><img src="pictures/2_PRW/PRW3.jpeg" alt=""></div>
             <div class="foto second hidden"><img src="pictures/2_PRW/PRW4.jpeg" alt=""></div>
             <div class="description">
-              <p>kuchnia PRW</p>
+              <p>kuchnia</p>
               <p>9.5 m<sup>2</sup></p>
             </div>
             <div class="foto third"><img src="pictures/3_KOND/KOND1m.jpeg" alt=""></div>
@@ -103,21 +103,21 @@
             <div class="foto third hidden"><img src="pictures/3_KOND/KOND6.jpeg" alt=""></div>
             <div class="foto third hidden"><img src="pictures/3_KOND/KOND7.jpg" alt=""></div>
             <div class="description">
-              <p>kuchnia KOND</p>
+              <p>kuchnia</p>
               <p>powierzchnia: 6.7 m<sup>2</sup></p>
             </div>
             <div class="foto fourth"><img src="pictures/4_PRWL/PRWLm.jpeg" alt=""></div>
             <div class="foto fourth hidden"><img src="pictures/4_PRWL/PRWL1.jpeg" alt=""></div>
             <div class="foto fourth hidden"><img src="pictures/4_PRWL/PRWL2.jpeg" alt=""></div>
             <div class="description">
-              <p>łazienka PRWL</p>
+              <p>łazienka</p>
             </div>
             <div class="foto fifth "><img src="pictures/5_ABZ/ABZm.jpg" alt=""></div>
             <div class="foto fifth hidden"><img src="pictures/5_ABZ/ABZ1.jpeg" alt=""></div>
             <div class="foto fifth hidden"><img src="pictures/5_ABZ/ABZ2.jpeg" alt=""></div>
             <div class="foto fifth hidden"><img src="pictures/5_ABZ/ABZ3.jpeg" alt=""></div>
             <div class="description">
-              <p>kuchnia ABZ</p>
+              <p>kuchnia</p>
               <p>powierzchnia: 4.8 m<sup>2</sup></p>
             </div>
           </div>
