--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     content="meble, meble na wymiar, wartszat stolarski, produkcja mebli, kuchnia, łazienka, Sławacinek Stary, Biała Podlaska">
   <meta name="author" content="Tomasz Panasiuk">
   <title>warsztat stolarski</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="shotrtcut icon" href="logo/web1.svg">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -173,17 +176,19 @@
         <h2>kontakt:</h2>
         <div class="footer-wrapper">
           <div class="footer-element">
-            <p>Warsztat:</p>
-            <p>Sławacinek Stary</p>
+            <p>+48 573 006 035</p>
+            <p>info@warsztatstolarski.com</p>
+            <p><span class="address">warsztat:</span></p>
+            <p>Sławacinek Stary 57a</p>
             <p>21-500 Biała Podlaska</p>
-            <p>Tel. 000000000</p>
-            <p>xyz@quwerty.pl</p>
-            <p>Z uwagi na charakter pracy, prosimy o kontakt przed przyjazdem.</p>
           </div>
           <div class="footer-element">
             <div class="footer-contact">
               <div class="fb"><a href="#"><img src="icons/fbIconWhite.svg" alt="facebook-icon"></a></div>
               <div class="ig"><a href="#"><img src="icons/instaIconWhite.svg" alt="instagram-icon"></a></div>
+            </div>
+            <div class="footer-element">
+              <p class="copyright">&copy; truix12</p>
             </div>
           </div>
         </div>
