--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div class="intro-text">
           <h2>o nas:</h2>
           <p>
-            Założony warsztat stolarski jest wynikiem potrzeby tworzenia rzeczy przy pomocy własnych
-            rąk, co daje niesamowitą satysfakcję w każdym wymiarze. Pracujemy na wschodzie Polski ale nie
+            Warsztat stolarski jest wynikiem potrzeby tworzenia rzeczy przy pomocy własnych rąk, co
+            daje niesamowitą satysfakcję w każdym wymiarze. Pracujemy na wschodzie Polski, ale nie
             obawiamy się również realizacji w dalszych zakamarkach naszego kraju.
           </p>
         </div>
@@ -53,22 +53,23 @@
         <div class="offer-div">
           <h2>oferta:</h2>
           <p>
-            Projektujemy i wykonujemy meble na wymiar, które tworzone są na bazie tradycyjnego rzemieślnictwa
-            uzupełnionego nowoczesnymi technologiami parametrycznymi. Pozwala to na osiągnięcie wymarzonych rezultatów
-            oraz solidną kontrolę projektu. Oprócz aktualnych rozwiązań technicznych jesteśmy wrażliwi na antropologię
-            ludzkiego ciała oraz przestrzeń w której budujemy wnętrze.
+            Projektujemy i wykonujemy meble na wymiar przy wykorzystaniu tradycyjnego rzemiosła
+            uzupełnionego nowoczesnymi technologiami parametrycznymi. Pozwala to na osiągnięcie
+            wymarzonych rezultatów oraz solidną kontrolę projektu. Oprócz znajomości aktualnych rozwiązań
+            technicznych jesteśmy wrażliwi na antropologię ludzkiego ciała oraz przestrzeń w której budujemy
+            wnętrze.
           </p>
           <p>
-            Pracę opieramy na dokładnym i rzetelnym zrozumieniu potrzeb użytkownika przyszłego owocu naszej radosnej
-            działalności. Radosnej, ponieważ nie wypieramy się dobrego humoru, który pozwolił nam wielokrotnie ukończyć
-            skomplikowane zamówienia.
+            Pracę opieramy na dokładnym i rzetelnym zrozumieniu potrzeb użytkownika przyszłego
+            owocu naszej radosnej działalności. Radosnej, ponieważ nie wypieramy się dobrego humoru, który
+            pozwolił nam wielokrotnie ukończyć skomplikowane zamówienia.
           </p>
-          <h3>Schemat działania:</h3>
+          <h3>schemat działania:</h3>
           <ol>
-            <li>Rozmowa / ustalenie potrzeb / określenie harmonogramu i budżetu</li>
-            <li>Koncepcja / szkic 3d / wycena szacunkowa</li>
-            <li>Projekt / wizualizacje / wycena szczegółowa</li>
-            <li>Produkcja mebli / montaż</li>
+            <li>rozmowa / ustalenie potrzeb / określenie harmonogramu i budżetu</li>
+            <li>koncepcja / szkic 3d / wycena szacunkowa</li>
+            <li>projekt / wizualizacje / wycena szczegółowa</li>
+            <li>produkcja mebli / montaż</li>
           </ol>
         </div>
       </section>
@@ -165,8 +166,9 @@
         <div class="cooperation-div">
           <h2>współpraca:</h2>
           <p>
-            Zawsze jesteśmy otwarci na rozmowę i nowe doświadczenia, które pozwalają rozwijać się w naszym zawodzie.
-            Jeśli masz coś ciekawego do pokazania Światu, skontaktuj się z nami. Czekamy!
+            Zawsze jesteśmy otwarci na rozmowę i nowe doświadczenia, które pozwalają rozwijać się
+            w naszym zawodzie. Jeśli masz coś ciekawego do pokazania Światu, skontaktuj się z nami.
+            Czekamy !
           </p>
         </div>
       </section>
@@ -178,14 +180,17 @@
           <div class="footer-element">
             <p>+48 573 006 035</p>
             <p>info@warsztatstolarski.com</p>
-            <p><span class="address">warsztat:</span></p>
             <p>Sławacinek Stary 57a</p>
             <p>21-500 Biała Podlaska</p>
           </div>
           <div class="footer-element">
             <div class="footer-contact">
-              <div class="fb"><a href="#"><img src="icons/fbIconWhite.svg" alt="facebook-icon"></a></div>
-              <div class="ig"><a href="#"><img src="icons/instaIconWhite.svg" alt="instagram-icon"></a></div>
+              <div class="fb">
+                <a href="https://www.facebook.com/people/Warsztat-stolarski/100085923606602/"><img src="icons/fbIconWhite.svg" alt="facebook-icon"></a>
+              </div>
+              <div class="ig">
+                <a href="https://www.instagram.com/warsztat_stolarski/"><img src="icons/instaIconWhite.svg" alt="instagram-icon"></a>
+              </div>
             </div>
             <div class="footer-element">
               <p class="copyright">&copy; truix12</p>
