add space in footer

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="footer-wrapper">
           <div class="footer-element">
             <p>+48 573 006 035</p>
-            <p>info@warsztatstolarski.com</p>
+            <p><span>info@warsztatstolarski.com</span></p>
             <p>Sławacinek Stary 57a</p>
             <p>21-500 Biała Podlaska</p>
           </div>
