change readme content edit svg logo fb ig

--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
           <div class="footer-element">
             <div class="footer-contact">
               <div class="fb">
-                <a href="https://www.facebook.com/people/Warsztat-stolarski/100085923606602/"><img src="icons/fbIconWhite.svg" alt="facebook-icon"></a>
+                <a href="https://www.facebook.com/people/Warsztat-stolarski/100085923606602/">Fb</a>
               </div>
               <div class="ig">
-                <a href="https://www.instagram.com/warsztat_stolarski/"><img src="icons/instaIconWhite.svg" alt="instagram-icon"></a>
+                <a href="https://www.instagram.com/warsztat_stolarski/">Ig</a>
               </div>
             </div>
             <div class="footer-element">
