add svg icons in footer

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <p>
             Zawsze jesteśmy otwarci na rozmowę i nowe doświadczenia, które pozwalają rozwijać się
             w naszym zawodzie. Jeśli masz coś ciekawego do pokazania Światu, skontaktuj się z nami.
-            Czekamy !
+            Czekamy!
           </p>
         </div>
       </section>
@@ -186,14 +186,14 @@
           <div class="footer-element">
             <div class="footer-contact">
               <div class="fb">
-                <a href="https://www.facebook.com/people/Warsztat-stolarski/100085923606602/">Fb</a>
+                <a href="https://www.facebook.com/people/Warsztat-stolarski/100085923606602/" target="_blank"><img src="icons/fbIconWhite.svg" alt="facebok-icon"></a>
               </div>
               <div class="ig">
-                <a href="https://www.instagram.com/warsztat_stolarski/">Ig</a>
+                <a href="https://www.instagram.com/warsztat_stolarski/" target="_blank"><img src="icons/instaIconWhite.svg" alt="instagam-icon"></a>
               </div>
             </div>
             <div class="footer-element">
-              <p class="copyright">&copy; truix12</p>
+              <p class="copyright"><a href="https://github.com/truix12" target="_blank">&copy; truix12</a></p>
             </div>
           </div>
         </div>
