change footer icons

--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
           <div class="footer-element">
             <div class="footer-contact">
               <div class="fb">
-                <a href="https://www.facebook.com/people/Warsztat-stolarski/100085923606602/" target="_blank"><img src="icons/fbIconWhite.svg" alt="facebok-icon"></a>
+                <a href="https://www.facebook.com/people/Warsztat-stolarski/100085923606602/" target="_blank"><img src="icons/fbIconWhiteP.png" alt="facebok-icon"></a>
               </div>
               <div class="ig">
-                <a href="https://www.instagram.com/warsztat_stolarski/" target="_blank"><img src="icons/instaIconWhite.svg" alt="instagam-icon"></a>
+                <a href="https://www.instagram.com/warsztat_stolarski/" target="_blank"><img src="icons/instaIconWhiteP.png" alt="instagam-icon"></a>
               </div>
             </div>
             <div class="footer-element">
