change meta remove "powierzchnia"

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Strona wizytówka warsztatu stolarskiego produkującego meble na zamówienie">
   <meta name="keywords"
-    content="meble, meble na wymiar, wartszat stolarski, produkcja mebli, kuchnia, łazienka, Sławacinek Stary, Biała Podlaska">
+    content="meble, meble na wymiar, szafy, kuchnie, łazienki, garderoby, wnętrza, wyposażenie wnętrz, wzornictwo, projektowanie mebli, wykonywanie mebli, warsztat stolarski, stolarz, Biała Podlaska">
   <meta name="author" content="Tomasz Panasiuk">
   <title>warsztat stolarski</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -87,8 +87,7 @@
             <div class="foto first hidden""><img src=" pictures/1_PIE/PIE7.jpeg" alt=""></div>
             <div class="foto first hidden""><img src=" pictures/1_PIE/PIE8.jpeg" alt=""></div>
             <div class="description">
-              <p>kuchnia</p>
-              <p>powierzchnia: 6.1 m<sup>2</sup></p>
+              <p>kuchnia 6.1 m<sup>2</sup></p>
             </div>
             <div class="foto second"><img src="pictures/2_PRW/PRWm.jpeg" alt=""></div>
             <div class="foto second hidden"><img src="pictures/2_PRW/PRW1.jpg" alt=""></div>
@@ -96,8 +95,7 @@
             <div class="foto second hidden"><img src="pictures/2_PRW/PRW3.jpeg" alt=""></div>
             <div class="foto second hidden"><img src="pictures/2_PRW/PRW4.jpeg" alt=""></div>
             <div class="description">
-              <p>kuchnia</p>
-              <p>9.5 m<sup>2</sup></p>
+              <p>kuchnia 9.5 m<sup>2</sup></p>
             </div>
             <div class="foto third"><img src="pictures/3_KOND/KOND1m.jpeg" alt=""></div>
             <div class="foto third hidden"><img src="pictures/3_KOND/KOND2.jpeg" alt=""></div>
@@ -107,8 +105,7 @@
             <div class="foto third hidden"><img src="pictures/3_KOND/KOND6.jpeg" alt=""></div>
             <div class="foto third hidden"><img src="pictures/3_KOND/KOND7.jpg" alt=""></div>
             <div class="description">
-              <p>kuchnia</p>
-              <p>powierzchnia: 6.7 m<sup>2</sup></p>
+              <p>kuchnia 6.7 m<sup>2</sup></p>
             </div>
             <div class="foto fourth"><img src="pictures/4_PRWL/PRWLm.jpeg" alt=""></div>
             <div class="foto fourth hidden"><img src="pictures/4_PRWL/PRWL1.jpeg" alt=""></div>
@@ -121,8 +118,7 @@
             <div class="foto fifth hidden"><img src="pictures/5_ABZ/ABZ2.jpeg" alt=""></div>
             <div class="foto fifth hidden"><img src="pictures/5_ABZ/ABZ3.jpeg" alt=""></div>
             <div class="description">
-              <p>kuchnia</p>
-              <p>powierzchnia: 4.8 m<sup>2</sup></p>
+              <p>kuchnia 4.8 m<sup>2</sup></p>
             </div>
           </div>
         </div>
